Wrote chapter 4 Made corrections on previous chapters

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% le caratteristiche richieste dall'università sono ellamport1986latexencate qui: https://stem.elearning.unipd.it/mod/book/view.php?id=234&chapterid=46#modalita
+% le caratteristiche richieste dall'università sono elencate qui: https://stem.elearning.unipd.it/mod/book/view.php?id=234&chapterid=46#modalita
 % 12pt: font richiesto dall'università
 % twoside: i margini interni ed esterni sono scambiati per le pagine "a sinistra" e "a destra"
 % openright: i capitoli cominciano in pagine dispari ("a destra")
